--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,14 @@ igl_include(glfw)
 #igl_include(embree)
 #igl_include(imgui)
 #igl_include(opengl)
-#igl_include(stb)
+igl_include(stb)
 #igl_include(predicates)
 #igl_include(xml)
 #igl_include(copyleft cgal)
 #igl_include(copyleft comiso)
 #igl_include(copyleft core)
 #igl_include(copyleft cork)
-#igl_include(copyleft tetgen)
+igl_include(copyleft tetgen)
 #igl_include(restricted matlab)
 #igl_include(restricted mosek)
 #igl_include(restricted triangle)
@@ -35,14 +35,14 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
   # igl::embree
   # igl::imgui
   # igl::opengl
-  # igl::stb
+  igl::stb
   # igl::predicates
   # igl::xml
   # igl_copyleft::cgal
   # igl_copyleft::comiso
   # igl_copyleft::core
   # igl_copyleft::cork
-  # igl_copyleft::tetgen
+  igl_copyleft::tetgen
   # igl_restricted::matlab
   # igl_restricted::mosek
   # igl_restricted::triangle
