--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
-project(libigl_hip_project)
+project(libigl_hip_project LANGUAGES CXX)
 
 add_subdirectory(libigl)
