--- a/hip/CMakeLists.txt
+++ b/hip/CMakeLists.txt
@@ -4,6 +4,12 @@ project(hip_functions LANGUAGES CXX HIP)
 # Find HIP
 find_package(hip REQUIRED)
 
+# Find rocPRIM (required by hipCUB)
+find_package(rocprim REQUIRED)
+
+# Find hipCUB
+find_package(hipcub REQUIRED)
+
 # Set HIP architecture targets (fallback to common ones)
 if(NOT DEFINED CMAKE_HIP_ARCHITECTURES)
     set(CMAKE_HIP_ARCHITECTURES "gfx906;gfx942")
@@ -30,8 +36,8 @@ add_library(hip_functions STATIC ${HIP_SOURCES})
 # Set HIP compiler for the sources
 set_source_files_properties(${HIP_SOURCES} PROPERTIES LANGUAGE HIP)
 
-# Link HIP runtime
-target_link_libraries(hip_functions PUBLIC hip::host)
+# Link HIP runtime and hipCUB
+target_link_libraries(hip_functions PUBLIC hip::host hip::hipcub)
 
 # Set include directories
 target_include_directories(hip_functions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -51,7 +57,7 @@ set_target_properties(hip_functions PROPERTIES
 # Create executable for testing (optional)
 add_executable(wa1-task3 wa1-task3-hipified.cu)
 set_source_files_properties(wa1-task3-hipified.cu PROPERTIES LANGUAGE HIP)
-target_link_libraries(wa1-task3 PUBLIC hip::host)
+target_link_libraries(wa1-task3 PUBLIC hip::host hip::hipcub)
 
 # Add Eigen include directories to test executable if available
 if(DEFINED EIGEN_INCLUDE_DIRS)
